--- a/package.json
+++ b/package.json
@@ -22,6 +22,13 @@
   "devDependencies": {
     "gulp-livereload": "^2.1.1",
     "gulp": "^3.8.8",
-    "ecstatic": "^0.5.4"
+    "ecstatic": "^0.5.4",
+    "gulp-watch": "^1.0.3",
+    "gulp-util": "^3.0.1",
+    "gulp-changed": "^1.0.0",
+    "gulp-cached": "^1.0.1",
+    "through2": "^0.6.1",
+    "gulp-markdown": "^1.0.0",
+    "gulp-concat": "^2.4.0"
   }
 }
